attempting to fix css app size issue view on iphone 7

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,6 +46,20 @@ p {
   text-align: center;
 }
 
+.box {
+  background-color: rgba(0,0,0,0.5);
+  padding: 20px;
+  width: 60%;
+  margin: 100px auto;
+  text-align: center;
+  position: relative;
+}
+
+.imgage_resize {
+  max-width:50%;
+  max-height:50%;
+}
+
 .clr {
   clear:both;
 }
